Bug 128732 - FILEOPEN DOCX The End value of Color Gradient Transparency on Charts decreases.
Summary: FILEOPEN DOCX The End value of Color Gradient Transparency on Charts decreases.
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
6.4.0.0.alpha1+
Hardware: All All
: medium normal
Assignee: Balázs Varga
URL:
Whiteboard: target:6.4.0
Keywords: filter:docx
Depends on:
Blocks: OOXML-Chart
  Show dependency treegraph
 
Reported: 2019-11-12 08:54 UTC by NISZ LibreOffice Team
Modified: 2019-11-13 07:48 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot of the original and exported document side by side in Writer (183.25 KB, image/png)
2019-11-12 08:55 UTC, NISZ LibreOffice Team
Details
Example file from Writer (13.34 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-11-12 08:56 UTC, NISZ LibreOffice Team
Details
The original file saved by Writer (13.34 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2019-11-12 08:56 UTC, NISZ LibreOffice Team
Details

Note You need to log in before you can comment on or make changes to this bug.
Description NISZ LibreOffice Team 2019-11-12 08:54:45 UTC
Description:
The End value of Color Gradient Transparency on Charts decreases when the document is saved as DOCX with LibreOffice Writer.

Steps to Reproduce:
    1. Create a DOCX document in LibreOffice Writer.
    2. Insert a Column chart.
    3. Select a column.
    4. In Data Series window select Area tab.
    5. Choose Gradient button.
    6. Select Teal to Blue.
    7. Click on Transparency tab.
    8. Choose Gradient.
    9. Set Start value to 20 and End value to 30.
    10. Save and reload the document.
    11. View the attached screenshot.
    12. Notice, that the End value is one less than it was set up.

Actual Results:
The End value of Color Gradient Transparency on Charts decreases
 by one after each saving. This doesn’t happen, when the document is saved as ODT.

Expected Results:
The End value of Color Gradient Transparency on Charts should have the same value.


Reproducible: Always


User Profile Reset: No



Additional Info:
LibreOffice details:
Version: 6.4.0.0.alpha1+ (x86)
Build ID: ec7374ff84c71edfbb30d6e4dc5b486b6df7107f
CPU threads: 4; OS: Windows 6.1 Service Pack 1 Build 7601; UI render: default; VCL: win;
TinderBox: Win-x86@42, Branch:master, Time: 2019-11-10_21:37:30
Locale: hu-HU (hu_HU); UI-Language: en-US
Calc: threaded
Comment 1 NISZ LibreOffice Team 2019-11-12 08:55:43 UTC
Created attachment 155730 [details]
Screenshot of the original and exported document side by side in Writer
Comment 2 NISZ LibreOffice Team 2019-11-12 08:56:18 UTC
Created attachment 155731 [details]
Example file from Writer
Comment 3 NISZ LibreOffice Team 2019-11-12 08:56:42 UTC
Created attachment 155732 [details]
The original file saved by Writer
Comment 4 Balázs Varga 2019-11-12 09:10:11 UTC
Confirmed in:

Version: 6.4.0.0.alpha1+ (x64)
Build ID: 45c40f88e2aabfdeb8890ce7dcfd8c9a3d212e23
CPU threads: 8; OS: Windows 10.0 Build 14393; UI render: GL; VCL: win; 
Locale: hu-HU (hu_HU); UI-Language: en-US
Comment 5 Commit Notification 2019-11-13 07:35:18 UTC
Balazs Varga committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/124db1f2e3008493254e5d710221dbdd40a526db

tdf#128732 Chart OOXML import: fix rounding error of color transparency

It will be available in 6.4.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.