tdf#128732 Chart OOXML import: fix rounding error

of color transparency. Use std::round() instead of casting.

Change-Id: I52efb541d62a9536c2eb5f99453dc2cb594e6fe4